--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -14,9 +14,11 @@ pipeline {
     stage('Unit Tests') {
       steps {
         sh """
-          ${PYTHON} -m pip install --upgrade pip
-          ${PYTHON} -m pip install -r requirements.txt
-          pytest -q
+          python3 -m venv .venv
+          . .venv/bin/activate
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
+          python -m pytest -q 
         """
       }
     }
